Bug 1200602 - Use the alternate content for <applet>. r=kmachulis